k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-backend
  namespace: e-education-backend
  labels:
    app: java-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-backend
  template:
    metadata:
      labels:
        app: java-backend
    spec:
      containers:
        - name: java-backend
          image: spydshasi/e-education:latest
          ports:
            - containerPort: 8082
