k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-backend-service
  namespace: e-education-backend
spec:
  selector:
    app: java-backend
  ports:
    - name: java-backend
      protocol: TCP
      port: 80
      targetPort: 8082
      # nodePort: 30080
      
  type: ClusterIP
