k8s/Ingress-rule.yaml
# ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/scheme: internet-facing  
    alb.ingress.kubernetes.io/target-type: ip          
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - path: /api      
        pathType: Prefix
        backend:
          service:
            name: java-backend-service
            port:
              number: 80
